tests/pld-test-output/tests-Init-01_fail/pld-compile.txt
line 1:0 token recognition error at: 'S'
line 1:3 token recognition error at: 'รง'
line 1:7 token recognition error at: ''est du C, moi je suis prof de manga.\n'
Error in input.c.
Error mismatched input 'i' expecting 'int'. On position 1:1
   "Si รงa c'est du C, moi je suis prof de manga."
     ^

1 error generated.

return code: 1
